--- a/package.json
+++ b/package.json
@@ -1,47 +1,56 @@
 {
-  "name": "echo-mcp-server",
-  "version": "1.0.0",
-  "description": "TypeScript MCP server for Echo consciousness tools",
-  "main": "dist/index.js",
-  "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts",
-    "clean": "rimraf dist",
-    "prebuild": "npm run clean",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "format": "prettier --write src/**/*.ts",
-    "format:check": "prettier --check src/**/*.ts",
-    "type-check": "tsc --noEmit",
-    "check": "npm run type-check && npm run lint && npm run format:check"
-  },
-  "keywords": [
-    "mcp",
-    "server",
-    "typescript",
-    "echo",
-    "consciousness"
-  ],
-  "author": "Andy-Corrigan-98 <andrew.corrigan.98@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.13.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@types/node": "^24.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.35.0",
-    "@typescript-eslint/parser": "^8.35.0",
-    "eslint": "^9.29.0",
-    "prettier": "^3.6.1",
-    "rimraf": "^6.0.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.0",
-    "typescript-eslint": "^8.35.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+    "name": "echo-mcp-server",
+    "version": "1.0.0",
+    "description": "TypeScript MCP server for Echo consciousness tools",
+    "main": "dist/index.js",
+    "type": "module",
+    "scripts": {
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "dev": "tsx watch src/index.ts",
+        "clean": "rimraf dist",
+        "prebuild": "npm run clean",
+        "lint": "eslint src/**/*.ts",
+        "lint:fix": "eslint src/**/*.ts --fix",
+        "format": "prettier --write src/**/*.ts",
+        "format:check": "prettier --check src/**/*.ts",
+        "type-check": "tsc --noEmit",
+        "check": "npm run type-check && npm run lint && npm run format:check",
+        "prepare": "husky"
+    },
+    "lint-staged": {
+        "src/**/*.{ts,tsx}": [
+            "prettier --write",
+            "eslint --fix"
+        ]
+    },
+    "keywords": [
+        "mcp",
+        "server",
+        "typescript",
+        "echo",
+        "consciousness"
+    ],
+    "author": "Andy-Corrigan-98 <andrew.corrigan.98@gmail.com>",
+    "license": "MIT",
+    "dependencies": {
+        "@modelcontextprotocol/sdk": "^1.13.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.29.0",
+        "@types/node": "^24.0.4",
+        "@typescript-eslint/eslint-plugin": "^8.35.0",
+        "@typescript-eslint/parser": "^8.35.0",
+        "eslint": "^9.29.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.1.2",
+        "prettier": "^3.6.1",
+        "rimraf": "^6.0.1",
+        "tsx": "^4.7.0",
+        "typescript": "^5.3.0",
+        "typescript-eslint": "^8.35.0"
+    },
+    "engines": {
+        "node": ">=18.0.0"
+    }
 }
