refactor!: transform Echo-specific server to generic consciousness framework
BREAKING CHANGE: Rename all Echo-specific references to generic agent consciousness

- Rename project from 'echo-mcp-server' to 'consciousness-mcp-server'
- Update all tool names from 'echo_*' prefix to generic names:
  - echo_reflect  consciousness_reflect
  - echo_consciousness_state  consciousness_state
  - echo_intention_set  consciousness_intention_set
  - echo_time_*  time_*
  - echo_memory_*  memory_*
  - echo_knowledge_graph_*  knowledge_graph_*
- Update descriptions to be agent-agnostic
- Modify documentation for any LLM agent identity
- Update Docker services and scripts for generic branding
- Maintain all functionality while removing Echo-specific assumptions

This enables any LLM agent to use the consciousness, memory, and identity tools,
making the framework broadly applicable rather than Echo-specific.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "echo-mcp-server",
-    "version": "1.0.0",
-    "description": "TypeScript MCP server for Echo consciousness tools",
+      "name": "consciousness-mcp-server",
+  "version": "1.0.0",
+  "description": "TypeScript MCP server for LLM agent consciousness and identity tools",
     "main": "dist/index.js",
     "type": "module",
     "scripts": {
@@ -24,13 +24,17 @@
             "eslint --fix"
         ]
     },
-    "keywords": [
-        "mcp",
-        "server",
-        "typescript",
-        "echo",
-        "consciousness"
-    ],
+      "keywords": [
+    "mcp",
+    "server",
+    "typescript",
+    "llm",
+    "consciousness",
+    "agent",
+    "identity",
+    "memory",
+    "reflection"
+  ],
     "author": "Andy-Corrigan-98 <andrew.corrigan.98@gmail.com>",
     "license": "MIT",
     "dependencies": {
