--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
 services:
-  echo-mcp-server:
+  consciousness-mcp-server:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: echo-mcp-server
+    container_name: consciousness-mcp-server
     ports:
       - "3000:3000"
     environment:
@@ -23,11 +23,11 @@ services:
       start_period: 10s
 
   # Development service
-  echo-mcp-dev:
+  consciousness-mcp-dev:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: echo-mcp-dev
+    container_name: consciousness-mcp-dev
     ports:
       - "3001:3000"
     environment:
