chore: remove personal email from package.json for privacy
- Update author field to use GitHub username only
- Protect personal email address from potential spam
- Maintain proper attribution while preserving privacy
- Align with responsible disclosure practices

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "memory",
     "reflection"
   ],
-    "author": "Andy-Corrigan-98 <andrew.corrigan.98@gmail.com>",
+    "author": "Andy-Corrigan-98",
     "license": "MIT",
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.13.1"
