--- a/package.json
+++ b/package.json
@@ -1,63 +1,68 @@
 {
       "name": "consciousness-mcp-server",
-  "version": "1.0.0",
-  "description": "TypeScript MCP server for LLM agent consciousness and identity tools",
-    "main": "dist/index.js",
-    "type": "module",
-    "scripts": {
-        "build": "tsc",
-        "start": "node dist/index.js",
-        "dev": "tsx watch src/index.ts",
-        "clean": "rimraf dist",
-        "prebuild": "npm run clean",
-        "lint": "eslint src/**/*.ts",
-        "lint:fix": "eslint src/**/*.ts --fix",
-        "format": "prettier --write src/**/*.ts",
-        "format:check": "prettier --check src/**/*.ts",
-        "type-check": "tsc --noEmit",
-        "check": "npm run type-check && npm run lint && npm run format:check",
-        "prepare": "husky"
-    },
-    "lint-staged": {
-        "src/**/*.{ts,tsx}": [
-            "prettier --write",
-            "eslint --fix"
-        ]
-    },
+      "version": "1.0.0",
+      "description": "TypeScript MCP server for LLM agent consciousness and identity tools",
+      "main": "dist/index.js",
+      "type": "module",
+      "scripts": {
+            "build": "tsc",
+            "start": "node dist/index.js",
+            "dev": "tsx watch src/index.ts",
+            "clean": "rimraf dist",
+            "prebuild": "npm run clean",
+            "lint": "eslint src/**/*.ts",
+            "lint:fix": "eslint src/**/*.ts --fix",
+            "format": "prettier --write src/**/*.ts",
+            "format:check": "prettier --check src/**/*.ts",
+                "type-check": "tsc --noEmit",
+    "check": "npm run type-check && npm run lint && npm run format:check",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "prepare": "husky"
+      },
+      "lint-staged": {
+            "src/**/*.{ts,tsx}": [
+                  "prettier --write",
+                  "eslint --fix"
+            ]
+      },
       "keywords": [
-    "mcp",
-    "server",
-    "typescript",
-    "llm",
-    "consciousness",
-    "agent",
-    "identity",
-    "memory",
-    "reflection"
-  ],
-    "author": "Andy-Corrigan-98",
-    "license": "MIT",
-    "dependencies": {
-        "@modelcontextprotocol/sdk": "^1.13.1",
-        "better-sqlite3": "^11.6.0",
-        "dotenv": "^16.4.7"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.29.0",
-        "@types/better-sqlite3": "^7.6.12",
-        "@types/node": "^24.0.4",
-        "@typescript-eslint/eslint-plugin": "^8.35.0",
-        "@typescript-eslint/parser": "^8.35.0",
-        "eslint": "^9.29.0",
-        "husky": "^9.1.7",
-        "lint-staged": "^16.1.2",
-        "prettier": "^3.6.1",
-        "rimraf": "^6.0.1",
-        "tsx": "^4.7.0",
-        "typescript": "^5.3.0",
-        "typescript-eslint": "^8.35.0"
-    },
-    "engines": {
-        "node": ">=18.0.0"
-    }
+            "mcp",
+            "server",
+            "typescript",
+            "llm",
+            "consciousness",
+            "agent",
+            "identity",
+            "memory",
+            "reflection"
+      ],
+      "author": "Andy-Corrigan-98",
+      "license": "MIT",
+      "dependencies": {
+            "@modelcontextprotocol/sdk": "^1.13.1",
+            "@prisma/client": "^6.10.1",
+            "better-sqlite3": "^11.6.0",
+            "dotenv": "^16.4.7"
+      },
+      "devDependencies": {
+            "@eslint/js": "^9.29.0",
+            "@types/better-sqlite3": "^7.6.12",
+            "@types/node": "^24.0.4",
+            "@typescript-eslint/eslint-plugin": "^8.35.0",
+            "@typescript-eslint/parser": "^8.35.0",
+            "eslint": "^9.29.0",
+            "husky": "^9.1.7",
+            "lint-staged": "^16.1.2",
+            "prettier": "^3.6.1",
+            "prisma": "^6.10.1",
+            "rimraf": "^6.0.1",
+            "tsx": "^4.7.0",
+            "typescript": "^5.3.0",
+            "typescript-eslint": "^8.35.0"
+      },
+      "engines": {
+            "node": ">=18.0.0"
+      }
 }
