feat(tests): add comprehensive test suite with Jest framework
- Set up Jest with TypeScript support and ES modules configuration
- Add comprehensive tests for InputValidator with 100% coverage
- Create extensive MemoryTools tests with mocked dependencies
- Add ConsciousnessTools and TimeTools integration tests
- Achieve 71.4% overall code coverage with 61 passing tests
- Include test scripts: test, test:watch, test:coverage, test:ci
- Add test setup configuration and proper mocking strategies
- Validate all tool schemas and execution paths
- Test security validation, error handling, and edge cases

--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
             "lint:fix": "eslint src/**/*.ts --fix",
             "format": "prettier --write src/**/*.ts",
             "format:check": "prettier --check src/**/*.ts",
-                "type-check": "tsc --noEmit",
-    "check": "npm run type-check && npm run lint && npm run format:check",
-    "db:generate": "prisma generate",
+            "type-check": "tsc --noEmit",
+            "check": "npm run type-check && npm run lint && npm run format:check && npm run test",
+                "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "prepare": "husky"
       },
       "lint-staged": {
@@ -48,16 +52,20 @@
       },
       "devDependencies": {
             "@eslint/js": "^9.29.0",
+            "@jest/globals": "^30.0.3",
             "@types/better-sqlite3": "^7.6.12",
+            "@types/jest": "^30.0.0",
             "@types/node": "^24.0.4",
             "@typescript-eslint/eslint-plugin": "^8.35.0",
             "@typescript-eslint/parser": "^8.35.0",
             "eslint": "^9.29.0",
             "husky": "^9.1.7",
+            "jest": "^30.0.3",
             "lint-staged": "^16.1.2",
             "prettier": "^3.6.1",
             "prisma": "^6.10.1",
             "rimraf": "^6.0.1",
+            "ts-jest": "^29.4.0",
             "tsx": "^4.7.0",
             "typescript": "^5.3.0",
             "typescript-eslint": "^8.35.0"
