feat: add TypeScript path aliases for cleaner imports
- Add baseUrl and paths configuration to tsconfig.json
- Enable @/* aliases for all src modules
- Add specific @/memory alias for barrel export
- Add @/tools/*, @/db/*, @/validation/* aliases
- Maintains .js extensions for ES module compatibility

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,16 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"],
+      "@/tools/*": ["./tools/*"],
+      "@/db/*": ["./db/*"],
+      "@/validation/*": ["./validation/*"],
+      "@/memory": ["./tools/memory/index.js"],
+      "@/memory/*": ["./tools/memory/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
