feat: implement self-contained docker service with auto db setup
- Add entrypoint.sh script for automatic database initialization
- Update Dockerfile to handle Prisma client generation and setup
- Configure docker-compose.yml with DATABASE_URL environment
- Fix TypeScript compilation to output index.js correctly
- Remove obsolete docker-compose version specification
- Update README with self-contained service documentation

Container automatically:
- Generates Prisma client on startup
- Creates database schema if needed
- Applies schema updates to existing databases
- Starts MCP server ready for use

Implements infrastructure-as-code pattern like Azure pipelines.
No manual database setup required - true microservice deployment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   consciousness-mcp-server:
     build:
@@ -11,6 +9,7 @@ services:
     environment:
       - NODE_ENV=production
       - MCP_DEBUG=false
+      - DATABASE_URL=file:/app/data/consciousness.db
     volumes:
       # Mount data directory for persistence if needed
       - ./data:/app/data
@@ -33,6 +32,7 @@ services:
     environment:
       - NODE_ENV=development
       - MCP_DEBUG=true
+      - DATABASE_URL=file:/app/data/consciousness.db
     volumes:
       - .:/app
       - /app/node_modules
