--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ node_modules/
 # Data directory
 data/ 
 /src/generated/prisma
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+prisma/dev.db
+prisma/*.db
