--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
             "check": "tsc --noEmit",
             "db:generate": "prisma generate",
             "db:push": "prisma db push",
+            "db:migrate:deploy": "prisma migrate deploy",
+            "db:migrate:dev": "prisma migrate dev",
+            "db:migrate:reset": "prisma migrate reset",
             "db:studio": "prisma studio",
             "db:seed": "tsx src/db/seed.ts",
             "test": "jest",
