feat(deps): add google generative ai dependency
- Add @google/generative-ai package for Gemini integration
- Support AI-powered reasoning and daydreaming evaluation
- Enable advanced natural language processing capabilities
- Provide foundation for intelligent content analysis

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
       "author": "Andy-Corrigan-98",
       "license": "MIT",
       "dependencies": {
+            "@google/generative-ai": "^0.24.1",
             "@modelcontextprotocol/sdk": "^1.13.1",
             "@prisma/client": "^6.10.1",
             "better-sqlite3": "^11.6.0",
