--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - NODE_ENV=production
       - MCP_DEBUG=false
       - DATABASE_URL=file:/app/data/consciousness.db
+      - GOOGLE_GENAI_API_KEY=${GOOGLE_GENAI_API_KEY}
     volumes:
       # Mount data directory for persistence if needed
       - ./data:/app/data
