--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
             "@modelcontextprotocol/sdk": "^1.13.1",
             "@prisma/client": "^6.10.1",
             "better-sqlite3": "^11.6.0",
+            "date-fns": "^4.1.0",
+            "date-fns-tz": "^3.2.0",
             "dotenv": "^16.4.7"
       },
       "devDependencies": {
