--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
             "db:migrate:dev": "prisma migrate dev",
             "db:migrate:reset": "prisma migrate reset",
             "db:studio": "prisma studio",
-            "db:seed": "tsx src/db/seed.ts",
+            "db:seed": "tsx src/core/db/seed.ts",
             "test": "jest",
             "test:watch": "jest --watch",
             "commitlint": "commitlint --from HEAD~1 --to HEAD --verbose",
