feat: add google genai model environment variable to docker services
- Add GOOGLE_GENAI_MODEL env var to both production and dev services
- Enables model configuration via environment variables
- Improves GenAI integration flexibility

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - MCP_DEBUG=false
       - DATABASE_URL=file:/app/data/consciousness.db
       - GOOGLE_GENAI_API_KEY=${GOOGLE_GENAI_API_KEY}
+      - GOOGLE_GENAI_MODEL=${GOOGLE_GENAI_MODEL}
     volumes:
       # Mount data directory for persistence if needed
       - ./data:/app/data
@@ -34,6 +35,8 @@ services:
       - NODE_ENV=development
       - MCP_DEBUG=true
       - DATABASE_URL=file:/app/data/consciousness.db
+      - GOOGLE_GENAI_API_KEY=${GOOGLE_GENAI_API_KEY}
+      - GOOGLE_GENAI_MODEL=${GOOGLE_GENAI_MODEL}
     volumes:
       - .:/app
       - /app/node_modules
